02-developers/02-tenants/superhero-battle/base/fights/app/rest-fights-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: "fights-db,otel-collector"
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/pittar-sandbox/quarkus-super-heroes
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java11-latest
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
    name: rest-fights
  name: rest-fights
spec:
  replicas: 1
  selector:
    matchLabels:
      name: rest-fights
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: "fights-db,otel-collector"
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/pittar-sandbox/quarkus-super-heroes
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8084"
        prometheus.io/scheme: http
      labels:
        app: rest-fights
        application: fights-service
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: fights-service
        app.kubernetes.io/version: native-java11-latest
        app.kubernetes.io/name: rest-fights
        name: rest-fights
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: fights
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-fights
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
              cpu: 1
            requests:
              memory: 768Mi
              cpu: 0.2
