02-developers/02-tenants/superhero-battle/base/fights/app/rest-fights-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: "fights-db,otel-collector"
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java11-latest
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
    name: rest-fights
  name: rest-fights
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
  type: ClusterIP
